<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity"
    style="@style/parent_widht_height">

    <android.support.constraint.ConstraintLayout style="@style/parent_widht_height_wrapContent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="10dp"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp" />

        <ImageView
            android:id="@+id/full_img"
            android:layout_width="match_parent"
            android:layout_height="271dp"
            android:contentDescription="@string/backdrop_image_of_the_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView

            android:id="@+id/posterImg"
            android:layout_width="131dp"
            android:layout_height="154dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="212dp"
            app:layout_constraintEnd_toEndOf="@+id/full_img"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toStartOf="@+id/full_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="187dp"
            android:layout_height="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_title_black_24dp"
            android:drawablePadding="5dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/movie_title"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="@+id/posterImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/posterImg"
            app:layout_constraintTop_toBottomOf="@+id/full_img"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="172dp"
            android:layout_height="19dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="5dp"
            android:text="@string/movierating"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@+id/movie_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/posterImg"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <TextView
            android:id="@+id/movie_release_date"
            android:layout_width="168dp"
            android:layout_height="22dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_date"
            android:drawablePadding="5dp"
            android:text="@string/_23_4_2018"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toBottomOf="@+id/posterImg"
            app:layout_constraintEnd_toEndOf="@+id/movie_rating"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/movie_rating"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating" />

        <TextView

            android:id="@+id/movie_overview"
            android:layout_width="match_parent"
            android:layout_height="198dp"
            android:layout_margin="10dp"
            android:layout_marginEnd="8dp"
            android:padding="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/posterImg"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="129dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/overview"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/posterImg"
            app:layout_constraintTop_toBottomOf="@+id/posterImg" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>